meegotouchhome (0.28.4~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 23 May 2011 15:15:55 +0300

meegotouchhome (0.28.3-1) unstable; urgency=low

  * Fixes: NB#254917 - Revealing User-local .desktop file entries fail always the first time

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 23 May 2011 15:15:31 +0300

meegotouchhome (0.28.2-1) unstable; urgency=low

  * Fixes: NB#254917 - Revealing User-local .desktop file entries fail always the first time

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 18 May 2011 15:23:24 +0300

meegotouchhome (0.28.1-1) unstable; urgency=low

  * Fixes: NB#251232 - Moving button in launcher produces noticeable lag

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Wed, 18 May 2011 10:26:09 +0300

meegotouchhome (0.28.0-1) unstable; urgency=low

  * Fixes: NB#254917 - Revealing User-local .desktop file entries fail always the first time

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 16 May 2011 19:13:19 +0300

meegotouchhome (0.27.1-1) unstable; urgency=low

  * Fixes: NB#254985 - Quick launch bar fixes

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 16 May 2011 11:20:17 +0300

meegotouchhome (0.27.0-1) unstable; urgency=low

  * Fixes: NB#254543 - Edit mode not exited when application window comes on top
  * Fixes: NB#251232 - Moving button in launcher produces noticeable lag

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Thu, 12 May 2011 12:26:17 +0300

meegotouchhome (0.26.1-1) unstable; urgency=low

  * Fixes: NB#246165 - Backup restore will corrupt the order of the applications in application grid

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 11 May 2011 16:01:50 +0300

meegotouchhome (0.26.0-1) unstable; urgency=low

  * Fixes: NB#246034 - Application icon is not visible after package installation if the .desktop file is installed before the icon
  * Fixes: NB#251152 - home seems to create a spinner when starting apps
